feat: Update error handling
