# src/controllers/resource.ts
@@ -6,6 +6,7 @@ import { ISignInputs } from '@cheqd/sdk/build/types'
 import { SignInfo } from '@cheqd/ts-proto/cheqd/did/v2'
 
 import { v4 } from 'uuid'
+import { fromString } from 'uint8arrays'
 
 import { CheqdRegistrar, CheqdResolver, NetworkType } from '../service/cheqd'
 import { IResourceCreateRequest, IState } from '../types/types'
@@ -17,9 +18,11 @@ import { LocalStore } from './store'
 export class ResourceController {
 
     public static createValidator = [
-        check('name').exists().isString().withMessage('Resource name is required'),
-        check('type').exists().isString().withMessage('Resource type is required'),
-        param('did').exists().isString().contains('did:cheqd').withMessage('DID is required'),
+        param('did').exists().isString().contains('did:cheqd').withMessage(Messages.InvalidDid),
+        check('jobId').custom((value, {req})=>{
+            if(!value && !(req.body.name && req.body.type && req.body.data)) return false
+            return true
+        }).withMessage('name, type and data are required')
     ]
 
     public async create(request: Request, response: Response) {
@@ -31,75 +34,73 @@ export class ResourceController {
 
         const { did } = request.params
         
-        let { jobId, data, name, type, mimeType, alsoKnownAs, version, secret } = request.body as IResourceCreateRequest
-
-        // check if did is registered on the ledger
-        let resolvedDocument = await CheqdResolver(did)
-
-        if(!resolvedDocument?.didDocument) {
-            return response.status(400).send(Responses.GetInvalidResponse(
-                {id: did}, 
-                secret, 
-                Messages.DidNotFound
-            ))
-        }
+        let { jobId, data, name, type, alsoKnownAs, version, secret={} } = request.body as IResourceCreateRequest
         
-        let resourcePayload: MsgCreateResourcePayload
-        // Validate and get store data if any
-        if(jobId) {
-            const storeData = LocalStore.instance.getResource(jobId)
-            if(!storeData) {
-                return response.status(400).json(Responses.GetJobExpiredResponse(jobId))
-            } else if (storeData.state == IState.Finished) {
-                return response.status(201).json({
-                    jobId,
-                    resourceState: {
-                        resourceId: storeData.resource.id,
-                        state: "finished",
-                        secret,
-                        resource: storeData.resource
-                    }
-                })
-            }
-
-            resourcePayload = storeData.resource
-        } else if (!data) {
-            return response.status(400).json(Responses.GetInvalidResourceResponse({}, secret, Messages.InvalidResource))
-        } else {
-            jobId = v4()
-
-            if(mimeType == 'json') {
-                data = JSON.stringify(data)
-            }
-
-            resourcePayload = {
-                collectionId: did.split(':').pop()!,
-                id: v4(),
-                name,
-                resourceType: type,
-                data: Buffer.from(data),
-                version,
-                alsoKnownAs: alsoKnownAs || []
-            }
-        }
-        
-        let signInputs: ISignInputs[] | SignInfo[]
-        
-        if (secret.signingResponse ||  secret.keys) {
-            signInputs = secret.signingResponse ? convertToSignInfo(secret.signingResponse) : secret.keys!
-        } else {
-            LocalStore.instance.setResource(jobId, {resource: resourcePayload, state: IState.Action})
-            return response.status(200).json(Responses.GetResourceActionSignatureResponse(
-                jobId, 
-                resolvedDocument.verificationMethod, 
-                resourcePayload
-            ))
-        }
-
-        await CheqdRegistrar.instance.connect(NetworkType.Testnet)
-
+        let resourcePayload: Partial<MsgCreateResourcePayload> = {}
         try {
-            const result = await CheqdRegistrar.instance.createResource(signInputs, resourcePayload)
+            // check if did is registered on the ledger
+            let resolvedDocument = await CheqdResolver(did)
+
+            if(!resolvedDocument?.didDocument) {
+                return response.status(400).send(Responses.GetInvalidResponse(
+                    {id: did}, 
+                    secret, 
+                    Messages.DidNotFound
+                ))
+            } else {
+                resolvedDocument = resolvedDocument.didDocument
+            }
+            
+            // Validate and get store data if any
+            if(jobId) {
+                const storeData = LocalStore.instance.getResource(jobId)
+                if(!storeData) {
+                    return response.status(400).json(Responses.GetJobExpiredResponse(jobId))
+                } else if (storeData.state == IState.Finished) {
+                    return response.status(201).json({
+                        jobId,
+                        resourceState: {
+                            resourceId: storeData.resource.id,
+                            state: "finished",
+                            secret,
+                            resource: storeData.resource
+                        }
+                    })
+                }
+
+                resourcePayload = storeData.resource
+                resourcePayload.data = new Uint8Array(Object.values(resourcePayload.data!))
+            } else if (!data) {
+                return response.status(400).json(Responses.GetInvalidResourceResponse({}, secret, Messages.InvalidResource))
+            } else {
+                jobId = v4()
+
+                resourcePayload = {
+                    collectionId: did.split(':').pop()!,
+                    id: v4(),
+                    name,
+                    resourceType: type,
+                    data: fromString(data, 'base64'),
+                    version,
+                    alsoKnownAs
+                }
+            }
+            
+            let signInputs: ISignInputs[] | SignInfo[]
+            
+            if (secret.signingResponse ||  secret.keys) {
+                signInputs = secret.signingResponse ? convertToSignInfo(secret.signingResponse) : secret.keys!
+            } else {
+                LocalStore.instance.setResource(jobId, {resource: resourcePayload, state: IState.Action})
+                return response.status(200).json(Responses.GetResourceActionSignatureResponse(
+                    jobId, 
+                    resolvedDocument.verificationMethod, 
+                    resourcePayload
+                ))
+            }
+
+            await CheqdRegistrar.instance.connect((did.split(':'))[2] == NetworkType.Mainnet ? NetworkType.Mainnet : NetworkType.Testnet)
+            const result = await CheqdRegistrar.instance.createResource(signInputs, resourcePayload)      
             if ( result.code == 0 ) {
                 return response.status(201).json(Responses.GetResourceSuccessResponse(jobId, secret, resourcePayload))
             } else {
