# src/types/constants.ts
@@ -4,8 +4,11 @@ export enum Messages {
     TryAgain = "The operation failed due to an internal error. Please try again",
     GetSignature = "Please sign the following payload with the keys in verificationMethod and Add the signingResponse in secret",
     DidNotFound = "The DID does not exist",
-    DidDocument = "DID Document is required",
+    InvalidDidDocument = "Provide a valid DID Document with atleast one verification method",
+    InvalidDid = "The DID is not valid",
     InvalidJob = "The jobId is either expired or not found",
     SecretValidation = "Only one of seed,keys and signingResponse should be provided, Seed length should be 32, Keypair should be valid",
-    InvalidResource = "Resource Data is invalid"
+    InvalidResource = "Resource Data is invalid",
+    TestnetFaucet = "sketch mountain erode window enact net enrich smoke claim kangaroo another visual write meat latin bacon pulp similar forum guilt father state erase bright",
+    SigingResponse = "<Place the signature json array here> e.g. { verificationMethodId: did:cheqd:testnet:qsqdcansoica#key-1, signature: aca1s12q14213casdvaadcfas }"
 }
